--- a/autoencoder/Simple_Autoencoder.ipynb
+++ b/autoencoder/Simple_Autoencoder.ipynb
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Size of the encoding layer (the hidden layer)\n",
@@ -1603,13 +1605,7 @@
       "Epoch: 5/20... Training loss: 0.1114\n",
       "Epoch: 5/20... Training loss: 0.1129\n",
       "Epoch: 5/20... Training loss: 0.1118\n",
-      "Epoch: 5/20... Training loss: 0.1119\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch: 5/20... Training loss: 0.1119\n",
       "Epoch: 5/20... Training loss: 0.1062\n",
       "Epoch: 5/20... Training loss: 0.1116\n",
       "Epoch: 5/20... Training loss: 0.1108\n",
